@@ -344,7 +344,7 @@ public class AccessControlServiceTest {
         Assertions.assertThat(result).isFalse();
         List<ILoggingEvent> infoLogs = LogMonitoring.getLogsByLevel(listAppender, Level.WARN);
         assertEquals(1, infoLogs.size());
-        assertTrue(infoLogs.get(0).toString().contains("does not have permission to edit this userId"));
+        assertTrue(infoLogs.getFirst().toString().contains("does not have permission to edit this userId"));
     }
 
     @Test
@@ -422,6 +422,60 @@ public class AccessControlServiceTest {
 
         boolean result = accessControlService.canSendVerificationEmail(accessedUserId.toString());
         Assertions.assertThat(result).isFalse();
+    }
+
+    @Test
+    public void isUserManager_userNotProviderAdmin() {
+        AnonymousAuthenticationToken authentication = Mockito.mock(AnonymousAuthenticationToken.class);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+
+        UUID userId = UUID.randomUUID();
+        UUID appRoleId = UUID.randomUUID();
+
+        Permission userPermission = Permission.EDIT_EXTERNAL_USER;
+        AppRole appRole = AppRole.builder().id(appRoleId).name("Firm User").authzRole(true).permissions(Set.of(userPermission)).build();
+        EntraUser authenticatedUser = EntraUser.builder().id(userId).email("external@email.com")
+                .userProfiles(HashSet.newHashSet(1)).build();
+        UserProfile authenticatedUserProfile = UserProfile.builder()
+                .activeProfile(true)
+                .entraUser(authenticatedUser)
+                .appRoles(Set.of(appRole))
+                .userType(UserType.EXTERNAL) // External user type
+                .build();
+        authenticatedUser.getUserProfiles().add(authenticatedUserProfile);
+        Mockito.when(loginService.getCurrentEntraUser(authentication)).thenReturn(authenticatedUser);
+
+        boolean result = accessControlService.authenticatedUserHasAnyGivenPermissions(Permission.DELEGATE_EXTERNAL_USER_ACCESS);
+        Assertions.assertThat(result).isFalse();
+    }
+
+    @Test
+    public void isUserManager() {
+        AnonymousAuthenticationToken authentication = Mockito.mock(AnonymousAuthenticationToken.class);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+
+        UUID userId = UUID.randomUUID();
+        UUID appRoleId = UUID.randomUUID();
+
+        Permission userPermission = Permission.DELEGATE_EXTERNAL_USER_ACCESS;
+        AppRole appRole = AppRole.builder().id(appRoleId).name("Firm User Manager").authzRole(true).permissions(Set.of(userPermission)).build();
+        EntraUser authenticatedUser = EntraUser.builder().id(userId).email("external@email.com")
+                .userProfiles(HashSet.newHashSet(1)).build();
+        UserProfile authenticatedUserProfile = UserProfile.builder()
+                .activeProfile(true)
+                .entraUser(authenticatedUser)
+                .appRoles(Set.of(appRole))
+                .userType(UserType.EXTERNAL) // External user type
+                .build();
+        authenticatedUser.getUserProfiles().add(authenticatedUserProfile);
+        Mockito.when(loginService.getCurrentEntraUser(authentication)).thenReturn(authenticatedUser);
+
+        boolean result = accessControlService.authenticatedUserHasAnyGivenPermissions(Permission.DELEGATE_EXTERNAL_USER_ACCESS);
+        Assertions.assertThat(result).isTrue();
     }
 
     @Test
